--- a/Project.toml
+++ b/Project.toml
@@ -1,7 +1,7 @@
 name = "Nnetsauce"
 uuid = "efe80079-2d8f-4399-9724-693920340b4d"
-authors = ["thierrymoudiki <thierry.moudiki@gmail.com> and contributors"]
-version = "1.0.0-DEV"
+authors = ["thierrymoudiki <thierry.moudiki@gmail.com>"]
+version = "0.1.0"
 
 [compat]
 julia = "1.6"
