--- a/Project.toml
+++ b/Project.toml
@@ -13,4 +13,4 @@ Test = "8dfed614-e22c-5e08-85e1-65c5234f0b40"
 test = ["Test"]
 
 [deps]
-Pkg = "1.10.0"
+Pkg = "44cfe95a-1eb2-52ea-b672-e2afdf69b78f"
