include PyCall and Conda versions dependencies

--- a/Project.toml
+++ b/Project.toml
@@ -5,6 +5,10 @@ version = "0.1.0"
 
 [compat]
 julia = "1.6"
+Pkg = ">1.10.0"
+PyCall = ">1.96.4" 
+Conda = ">1.10.0"
+
 
 [extras]
 Test = "8dfed614-e22c-5e08-85e1-65c5234f0b40"
