include PyCall and Conda versions dependencies Pt.2

--- a/Project.toml
+++ b/Project.toml
@@ -5,9 +5,9 @@ version = "0.1.0"
 
 [compat]
 julia = "1.6"
-Pkg = ">1.10.0"
-PyCall = ">1.96.4" 
-Conda = ">1.10.0"
+Pkg = "1.10.0"
+PyCall = "1.96.4" 
+Conda = "1.10.0"
 
 
 [extras]
