remove tests Pt.2

--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -34,4 +34,4 @@ jobs:
           arch: ${{ matrix.arch }}
       - uses: julia-actions/cache@v1
       - uses: julia-actions/julia-buildpkg@v1
-      - uses: julia-actions/julia-runtest@v1
+      #- uses: julia-actions/julia-runtest@v1
