--- a/Project.toml
+++ b/Project.toml
@@ -10,6 +10,76 @@ PyCall = "1.96.4"
 Conda = "1.10.0"
 
 [deps]
-Pkg = "44cfe95a-1eb2-52ea-b672-e2afdf69b78f"
-PyCall = "438e738f-606a-5dbb-bf0a-cddfbfd45ab0"
+BenchmarkTools = "6e4b80f9-dd63-53aa-95a3-0cdb28fa8baf"
+CSV = "336ed68f-0bac-5ca0-87d4-7b16caf5d00b"
+Clustering = "aaaa29a8-35af-508c-8bc3-b662a17a0fe5"
+ColorSchemes = "35d6a980-a343-548e-a6ea-1d62b119f2f4"
+Colors = "5ae59095-9a9b-59fe-a467-6f913c188581"
 Conda = "8f4d0f93-b110-5947-807f-2305c1781a2d"
+Dash = "1b08a953-4be3-4667-9a23-3db579824955"
+DataFrames = "a93c6f00-e57d-5684-b7b6-d8193f3e46c0"
+DifferentialEquations = "0c46a032-eb83-5123-abaf-570d42b7fbaa"
+DimensionalData = "0703355e-b756-11e9-17c0-8b28908087d0"
+Distances = "b4f34e82-e78d-54a5-968a-f98e89d6e8f7"
+Distributions = "31c24e10-a181-5473-b8eb-7969acd0382f"
+FITSIO = "525bcba6-941b-5504-bd06-fd0dc1a4d2eb"
+Feather = "becb17da-46f6-5d3c-ad1b-1c5fe96bc73c"
+Flux = "587475ba-b771-5e3f-ad9e-33799f191a9c"
+Flux3D = "432009dd-59a1-4b72-8c93-6462ce9b220f"
+Formatting = "59287772-0a20-5a39-b81b-1366585eb4c0"
+GDAL = "add2ef01-049f-52c4-9ee2-e494f65e021a"
+GMT = "5752ebe1-31b9-557e-87aa-f909b540aa54"
+GRIB = "b16dfd50-4035-11e9-28d4-9dfe17e6779b"
+Genie = "c43c736e-a2d1-11e8-161f-af95117fbd1e"
+GeoDatasets = "ddc7317b-88db-5cb5-a849-8449e5df04f9"
+GeoInterface = "cf35fbd7-0cd7-5166-be24-54bfbe79505f"
+GeoJSON = "61d90e0f-e114-555e-ac52-39dfb47a3ef9"
+Geodesy = "0ef565a4-170c-5f04-8de2-149903a85f3d"
+GitHub = "bc5e4493-9b4d-5f90-b8aa-2b2bcaad7a26"
+Glob = "c27321d9-0574-5035-807b-f59d2c89b15c"
+HTTP = "cd3eb016-35fb-5094-929b-558a96fad6f3"
+IJulia = "7073ff75-c697-5162-941a-fcdaad2a7d2a"
+Interpolations = "a98d9a8b-a2ab-59e6-89dd-64a1c18fca59"
+JLD2 = "033835bb-8acc-5ee8-8aae-3f567f8a3819"
+JSON3 = "0f8b85d8-7281-11e9-16c2-39a750bddbf1"
+LLVM = "929cbde3-209d-540e-8aea-75f648917ca0"
+LibSerialPort = "a05a14c7-6e3b-5ba9-90a2-45558833e1df"
+LinearAlgebra = "37e2e46d-f89d-539d-b4ee-838fcccc9c8e"
+MLJ = "add582a8-e3ab-11e8-2d5e-e98b27df1bc7"
+Makie = "ee78f7c6-11fb-53f2-987a-cfe4a2b5a57a"
+Measurements = "eff96d63-e80a-5855-80a2-b1b0885c5ab7"
+Measures = "442fdcdd-2543-5da2-b0f3-8c86c306513e"
+Metalhead = "dbeba491-748d-5e0e-a39e-b530a07fa0cc"
+Missings = "e1d29d7a-bbdc-5cf2-9ac0-f12de2c33e28"
+NCDatasets = "85f8d34a-cbdd-5861-8df4-14fed0d494ab"
+NaNMath = "77ba4419-2d1f-58cd-9bb1-8ffee604a2e3"
+NetCDF = "30363a11-5582-574a-97bb-aa9a979735b9"
+Oceananigans = "9e8cae18-63c1-5223-a75c-80ca9d6e9a09"
+OnlineStats = "a15396b6-48d5-5d58-9928-6d29437db91e"
+Optim = "429524aa-4258-5aef-a3af-852621145aeb"
+Pandas = "eadc2687-ae89-51f9-a5d9-86b5a6373a9c"
+Parsers = "69de0a69-1ddd-5017-9359-2bf0b02dc9f0"
+PhysOcean = "3725be50-bbbd-5592-92c3-2f0e82159c3e"
+Pkg = "44cfe95a-1eb2-52ea-b672-e2afdf69b78f"
+PlotlyBase = "a03496cd-edff-5a9b-9e67-9cda94a718b5"
+PlotlyJS = "f0f68f2c-4968-5e81-91da-67840de0976a"
+Plots = "91a5bcdd-55d7-5caf-9e0b-520d859cae80"
+Pluto = "c3e4b0f8-55cb-11ea-2926-15256bba5781"
+Preferences = "21216c6a-2e73-6563-6e65-726566657250"
+PyCall = "438e738f-606a-5dbb-bf0a-cddfbfd45ab0"
+Quaternions = "94ee1d12-ae83-5a48-8b1c-48b8ff168ae0"
+ROMS = "da6b2582-fac1-11ea-b7c4-a321ee60f94e"
+RemoteS = "26020ff4-e92a-488e-a723-09c28e89e04a"
+ScikitLearn = "3646fa90-6ef7-5e7e-9f22-8aca16db6324"
+ShallowWaters = "56019723-2d87-4a65-81ff-59d5d8913e3c"
+Shapefile = "8e980c4a-a4fe-5da2-b3a7-4b4b0353a2f4"
+Statistics = "10745b16-79ce-11e8-11f9-7d13ad32a3b2"
+Tables = "bd369af6-aec1-5ad0-b16a-f7cc5008161c"
+TimeZones = "f269a46b-ccf7-5d73-abea-4c690281aa53"
+WebIO = "0f1e0344-ec1d-5b48-a673-e5cf874b6c29"
+XGBoost = "009559a3-9522-5dbb-924b-0b6ed2b22bb9"
+Zarr = "0a941bbe-ad1d-11e8-39d9-ab76183a1d99"
+Zygote = "e88e6eb3-aa80-5325-afca-941959d7151f"
+
+[preferences.NetCDF_jll]
+libnetcdf_path = "/Users/gong/miniforge3/lib/libnetcdf.19.dylib"
