--- a/Project.toml
+++ b/Project.toml
@@ -6,12 +6,12 @@ version = "0.1.0"
 [compat]
 julia = "1.10"
 Pkg = "1.6.7"
-PyCall = "1.96.4" 
+PythonCall = "0.9.15" 
 Conda = "1.10.0"
 
 [deps]
 Pkg = "44cfe95a-1eb2-52ea-b672-e2afdf69b78f"
-PyCall = "438e738f-606a-5dbb-bf0a-cddfbfd45ab0"
+PythonCall = "6099a3de-0909-46bc-b1f4-468b9a2dfc0d"
 Conda = "8f4d0f93-b110-5947-807f-2305c1781a2d"
 
 [preferences.NetCDF_jll]
