--- a/Project.toml
+++ b/Project.toml
@@ -7,12 +7,12 @@ version = "0.1.0"
 julia = "1.10"
 Pkg = "1.6.7"
 PythonCall = "0.9.15" 
-Conda = "1.10.0"
+CondaPkg = "0.2.22"
 
 [deps]
 Pkg = "44cfe95a-1eb2-52ea-b672-e2afdf69b78f"
 PythonCall = "6099a3de-0909-46bc-b1f4-468b9a2dfc0d"
-Conda = "8f4d0f93-b110-5947-807f-2305c1781a2d"
+CondaPkg = "992eb4ea-22a4-4c89-a5bb-47a3300528ab"
 
 [preferences.NetCDF_jll]
 libnetcdf_path = "/Users/gong/miniforge3/lib/libnetcdf.19.dylib"
