--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -21,8 +21,8 @@ jobs:
       matrix:
         version:
           - '1.10'
-          - '1.6'
-          - 'nightly'
+          #- '1.6'
+          #- 'nightly'
         os:
           - ubuntu-latest
           - macos-latest
