--- a/Project.toml
+++ b/Project.toml
@@ -7,10 +7,12 @@ version = "0.16.8"
 julia = "1.10"
 Pkg = "1.6.7"
 PyCall = "1.96.4"
+Conda = "1.10.0"
 
 [deps]
 Pkg = "44cfe95a-1eb2-52ea-b672-e2afdf69b78f"
 PyCall = "438e738f-606a-5dbb-bf0a-cddfbfd45ab0"
+Conda = "8f4d0f93-b110-5947-807f-2305c1781a2d"
 
 [preferences.NetCDF_jll]
 libnetcdf_path = "/Users/gong/miniforge3/lib/libnetcdf.19.dylib"
